IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2/22/14: Fix exit status, button width, splash screen for Ctfplotter on Mac.

2/21/14: Added three more colors for arrows drawn with Grab with Note.

2/21/14: Fixed changing transparency during model view movies.

2/15/14: IMOD_4-6-41
2/14/14: In eTomo, fixed a problem with slowness when opening 3dmod dialogs.
(Bug# 1778)

2/14/14: In eTomo - PEET fixed problems with defaults and the handling of
missing properties.(Bug# 1738)

2/13/14: Switched default antialiasing filter for Newstack to Lanczos 3.

2/9/14: Updated the images in the eTomo tutorial.  Also exposed the
autofidseed append parameter and initialized the seed model contours in 3dmod.
(Bug# 1777)

2/9/14: In eTomo - Setup Reconstruction, allowing .mrc image files to be
selected, and renaming them to .st.(Bug# 1696)

2/7/14: Fixed problems with installer on Python 2.5 and Python 3.

2/6/14: In eTomo - PEET, accepting integer vectors in selectClassID.
(Bug# 1775)

2/5/14: Makecomfile adds option to append to seed model for autofidseedb.com.

2/3/14: Changed Bead Fixer so value-based controls show or hide appropriately
when model is changed.

2/1/14: Made installer able to take a .csh file, so it can be used to upgrade
on Windows without Cygwin.

1/31/14: Fixed installer test for 32/64 bit mismatch and added test and
message about libjpeg 6.2 on Ubuntu.

1/30/14: IMOD_4-6-40
1/30/14: Switched to outputting signed bytes by default.  BYTE FILES WILL NO
LONGER BE READABLE BY VERSIONS BEFORE IMOD 4.3.

1/30/14: Fixed execute permission on Autofidseed and added option for passing
options to Imodfindbeads.

1/30/14: In eTomo fixed bugs in the Directive Editor.(Bug# 1721)

1/30/14: In eTomo - Directive Editor, fixed bugs which where causing unchanged
directives to be display in the default mode.(Bug# 1772)

1/30/14: In eTomo - Directive Editor, getting CTF defaults from origcoms.
(Bug# 1715)

1/29/14: IMOD_4-6-39