@@ -1,5 +1,7 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+2/26/14: Add options to 3dmod for setting initial center, angles, and zoom.
+
 2/22/14: Fix exit status, button width, splash screen for Ctfplotter on Mac.
 
 2/21/14: Added three more colors for arrows drawn with Grab with Note.
